# valor-vscode-fanyi-extension

fanyi/: README.md  package-lock.json  package.json  valor-fanyi-0.0.1.vsix
fanyi/src/: extension.ts
server/: Cargo.toml  README.md  api.http
server/src/: main.rs
