[package]
name = "valor-translate-vscode-extension-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7"
urlencoding = "2"
reqwest = "0"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
actix-web = "4"
dotenv = "0"